--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -62,7 +62,8 @@
     <div class="description">
       <div id="description-text" style="display: none;">Split is an election article search engine that separates
         articles by political leaning calculated by our own models. We take user inputs to change the political leaning
-        score and converge towards more accurate scores.</div>
+        score and converge towards more accurate scores. We show the score for how left or right an article is with 0
+        being unbiased and 1 being very biased. We also show the number of votes that have led to scores changing.</div>
     </div>
     <div id="help-button" onmouseover="showDescription()" onmouseout="hideDescription()">?</div>
 
@@ -84,6 +85,7 @@
           onkeydown="if(event.keyCode===13) filterText()">
       </div>
 
+      <hr id="line" class="line">
 
       <!--<div id="answer-box">
         <div id="middle-answer-box">
@@ -152,7 +154,7 @@
         return min2 + (value - min1) * (max2 - min2) / (max1 - min1);
       }
 
-      function answerBoxTemplate(title, titleDesc, rating, url, date) {
+      function answerBoxTemplate(title, titleDesc, rating, url, date, votes) {
         console.log(rating);
         let absrating = Math.abs(rating);
         console.log("absrating: " + absrating);
@@ -182,14 +184,15 @@
               <h3 id="title2" class='article-title'>${title}</h3>
             </a>
             <p class="date">${newdate}</p>
+            <div class="score">Political leaning score: ${absrating}</div>
               <div class='slider-container'>
                   <h4>Was our article political bias rating correct?</h4>
                 <div class="center">
                   <input id = 'slider' type='range' min = '0' max='100' value='50' class='slider'>
                   <div id="fixedMarker" class="fixed-marker" style="left: ${marker}%;">
                     </div>
-                    <div class="votes">Votes:</div>
-                  <button id= 'submit' onclick="submitScore()">Submit</button>
+                    <div class="votes">Votes: ${votes}</div>
+                  <button id= 'submit' onclick="submitScore()" data-votes="${votes}">Submit</button>
                 </div>
               </div> 
             </a> 
@@ -217,8 +220,8 @@
                 <div class="center">
                   <input id = 'slider' type='range' min = '0' max='100' value='50' class='slider'>
                   <div id="fixedMarker" class="fixed-marker" style="left: ${marker}%;">
-                    <div class="votes">Votes:</div>
                     </div>
+                    <div class="votes">Votes: ${votes}</div>
                   <button id= 'submit' onclick="submitScore()">Submit</button>
                 </div>
               </div> 
@@ -227,12 +230,10 @@
         </div>`
       }
 
-      function expand() {
-
-      }
 
       function submitScore() {
         var clickedButton = event.target;
+        var votes = parseInt(clickedButton.dataset.votes);
         var answerBox = clickedButton.closest('.record-box');
         var slider = answerBox.querySelector('.slider');
         var titleElement = answerBox.querySelector('.article-title');
@@ -253,7 +254,7 @@
           headers: {
             'Content-Type': 'application/json',
           },
-          body: JSON.stringify({ user_score: score, current_score: marker, title: title }),
+          body: JSON.stringify({ user_score: score, current_score: marker, title: title, votes: votes }),
         }).catch(error => {
           console.error('Error', error)
         })
@@ -276,6 +277,8 @@
       }
 
       function filterText() {
+        var line = document.getElementById("line");
+        line.classList.add('expand-animation');
         document.getElementById("left-answer-box").innerHTML = "";
         document.getElementById("right-answer-box").innerHTML = "";
         document.getElementById("middle-answer-box").innerHTML = "";
