Update style.css to be in line with new UI changes

--- a/backend/static/style.css
+++ b/backend/static/style.css
@@ -302,9 +302,9 @@ main {
   display: block;
 }
 
-.record-box:hover .slider-container {
+/*.record-box:hover .slider-container {
   display: block;
-}
+} */
 
 .slider {
   display: none;
