--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -192,8 +192,9 @@
         return min2 + (value - min1) * (max2 - min2) / (max1 - min1);
       }
 
-      function answerBoxTemplate(title, titleDesc, rating, url, date, votes) {
+      function answerBoxTemplate(title, text, rating, url, date, votes, sents) {
         console.log(rating);
+
         let absrating = Math.abs(rating);
         console.log("absrating: " + absrating);
         let direction;
@@ -213,11 +214,22 @@
           color = "rgb(255, 255, 255, 1)"
         }
         marker = mapValue(rating, -1, 1, 0, 100)
+        let rel_sents = "";
+        for (let i = 0; i < sents.length; i++) {
+          rel_sents += `<p style = 'background: ${color}'>${sents[i][0]}</p>`;
+        }
+
         var date = new Date(date);
         let newdate = ((date.getMonth() > 8) ? (date.getMonth() + 1) : ('0' + (date.getMonth() + 1))) + '/' + ((date.getDate() > 9) ? date.getDate() : ('0' + date.getDate())) + '/' + date.getFullYear();
         return `
         <div class='record-box'>
           <div class="record-box-overlay" style='background: ${color}'>
+            <dialog class="modal" id="${title.replace(/['"]/g, '')}" style='border-color: ${color}'><h2>We have highlighted some of the most relevant politically charged sentences that were marked by our algorithm</h2>
+              <div class='modal-content'>${rel_sents}
+            </div>
+            <div class = "button"><button class="button close-button" onclick='closeModal("${title.replace(/['"]/g, '')}")'>Close</button></div>
+              </dialog>
+            <button class="open-button" onclick='showModal("${title.replace(/['"]/g, '')}")'  style='background: ${color}'>?</button>
             <a class="link" href="${url}" target="_blank">
               <h3 id="title2" class='article-title'>${title}</h3>
             </a>
@@ -237,7 +249,7 @@
         </div>`
       }
 
-      function middleAnswerBoxTemplate(title, titleDesc, rating, url, date, votes) {
+      function middleAnswerBoxTemplate(title, text, rating, url, date, votes) {
         console.log(rating);
         let direction;
         let directionclass;
@@ -296,6 +308,14 @@
         })
       }
 
+      function showModal(title) {
+        document.getElementById(title).showModal();
+      }
+
+      function closeModal(title) {
+        document.getElementById(title).close();
+      }
+
       function sendFocus() {
         document.getElementById('filter-text-val').focus()
       }
@@ -352,7 +372,7 @@
         leftlist.forEach((json) => {
           console.log(json)
           let tempDiv = document.createElement("div");
-          tempDiv.innerHTML = answerBoxTemplate(json.title, (json.text.substring(0, 200) + "..."), json.score, json.url, json.date, json.votes);
+          tempDiv.innerHTML = answerBoxTemplate(json.title, json.text, json.score, json.url, json.date, json.votes, json.relevant_sentences);
           document.getElementById("left-answer-box").appendChild(tempDiv);
         });
       }
@@ -362,7 +382,7 @@
         rightlist.forEach((json) => {
           console.log(json)
           let tempDiv = document.createElement("div");
-          tempDiv.innerHTML = answerBoxTemplate(json.title, (json.text.substring(0, 200) + "..."), json.score, json.url, json.date, json.votes);
+          tempDiv.innerHTML = answerBoxTemplate(json.title, json.text, json.score, json.url, json.date, json.votes, json.relevant_sentences);
           document.getElementById("right-answer-box").appendChild(tempDiv);
         });
       }
@@ -372,7 +392,7 @@
         middlelist.forEach((json) => {
           console.log(json)
           let tempDiv = document.createElement("div");
-          tempDiv.innerHTML = middleAnswerBoxTemplate(json.title, (json.text.substring(0, 200) + "..."), json.score, json.url, json.date, json.votes);
+          tempDiv.innerHTML = middleAnswerBoxTemplate(json.title, json.text, json.score, json.url, json.date, json.votes, json.relevant_sentences);
           document.getElementById("middle-answer-box").appendChild(tempDiv);
         });
       }
@@ -383,7 +403,7 @@
         alllist.forEach((json) => {
           console.log(json)
           let tempDiv = document.createElement("div");
-          tempDiv.innerHTML = answerBoxTemplate(json.title, (json.text.substring(0, 200) + "..."), json.score, json.url, json.date, json.votes);
+          tempDiv.innerHTML = answerBoxTemplate(json.title, json.text, json.score, json.url, json.date, json.votes, json.relevant_sentences);
           document.getElementById("answer-box").appendChild(tempDiv);
         });
       }
